--- a/13 - Space Tourism Website/destination.html
+++ b/13 - Space Tourism Website/destination.html
@@ -47,13 +47,13 @@
             <div class="intro-content">
                 <nav class="secondary-nav">
                     <ul class="secondary-nav-list">
-                        <li><a href="index.html" class="secondary-nav-link active letter-spacing-2">Moon</a></li>
-                        <li><a href="destination.html" class="secondary-nav-link letter-spacing-2">Mars</a></li>
-                        <li><a href="crew.html" class="secondary-nav-link letter-spacing-2">Europa</a></li>
-                        <li><a href="technology.html" class="secondary-nav-link letter-spacing-2">Titan</a></li>
+                        <li><a href="#" class="secondary-nav-link active-link letter-spacing-2">Moon</a></li>
+                        <li><a href="#" class="secondary-nav-link letter-spacing-2">Mars</a></li>
+                        <li><a href="#" class="secondary-nav-link letter-spacing-2">Europa</a></li>
+                        <li><a href="#" class="secondary-nav-link letter-spacing-2">Titan</a></li>
                     </ul>
                 </nav>
-                <div class="destination-planet destination-moon">
+                <div class="destination-planet destination-moon current-active-destination">
                     <h2 class="planet-heading font-size-800 uppercase text-white font-family-bellefair">Moon</h2>
                     <p class="planet-text font-size-400">
                         See our planet as you’ve never seen it before. A perfect relaxing trip away to help
@@ -73,6 +73,67 @@
                     </div>
                 </div>
 
+                <div class="destination-planet destination-mars">
+                    <h2 class="planet-heading font-size-800 uppercase text-white font-family-bellefair">Mars</h2>
+                    <p class="planet-text font-size-400">
+                        Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons,
+                        the tallest planetary mountain in our solar system. It’s two and a half times
+                        the size of Everest!
+                    </p>
+                    <div class="horizontal-line"></div>
+                    <div class="planet-details grid">
+                        <div class="distance">
+                            <h3 class="distance-label">Avg. distance</h3>
+                            <p class="distance-text">225 mil. km</p>
+                        </div>
+                        <div class="travel-time">
+                            <h3 class="time-label">Est. travel time</h3>
+                            <p class="days-text">9 months</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="destination-planet destination-europa">
+                    <h2 class="planet-heading font-size-800 uppercase text-white font-family-bellefair">Europa</h2>
+                    <p class="planet-text font-size-400">
+                        The smallest of the four Galilean moons orbiting Jupiter, Europa is a
+                        winter lover’s dream. With an icy surface, it’s perfect for a bit of
+                        ice skating, curling, hockey, or simple relaxation in your snug
+                        wintery cabin.
+                    </p>
+                    <div class="horizontal-line"></div>
+                    <div class="planet-details grid">
+                        <div class="distance">
+                            <h3 class="distance-label">Avg. distance</h3>
+                            <p class="distance-text">628 mil. km</p>
+                        </div>
+                        <div class="travel-time">
+                            <h3 class="time-label">Est. travel time</h3>
+                            <p class="days-text">3 years</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="destination-planet destination-titan">
+                    <h2 class="planet-heading font-size-800 uppercase text-white font-family-bellefair">Titan</h2>
+                    <p class="planet-text font-size-400">
+                        The only moon known to have a dense atmosphere other than Earth, Titan
+                        is a home away from home (just a few hundred degrees colder!). As a
+                        bonus, you get striking views of the Rings of Saturn.
+                    </p>
+                    <div class="horizontal-line"></div>
+                    <div class="planet-details grid">
+                        <div class="distance">
+                            <h3 class="distance-label">Avg. distance</h3>
+                            <p class="distance-text">1.6 bil. km</p>
+                        </div>
+                        <div class="travel-time">
+                            <h3 class="time-label">Est. travel time</h3>
+                            <p class="days-text">7 years</p>
+                        </div>
+                    </div>
+                </div>
+
 
 
             </div>
@@ -82,5 +143,6 @@
 </main>
 
 <script src="Javascript/script.js"></script>
+<script src="Javascript/tabs.js"></script>
 </body>
 </html>
