--- a/13 - Space Tourism Website/destination.html
+++ b/13 - Space Tourism Website/destination.html
@@ -17,12 +17,12 @@
     </div>
     <nav class="main-nav">
         <ul class="main-nav-list underline-indicators">
-            <li><a href="index.html" class="main-nav-link active letter-spacing-2"><span class="number">00</span>
+            <li><a href="index.html" class="main-nav-link letter-spacing-3"><span class="number">00</span>
                 Home</a></li>
-            <li><a href="destination.html" class="main-nav-link letter-spacing-2"><span class="number">01</span>Destination</a>
+            <li><a href="destination.html" class="main-nav-link active letter-spacing-3"><span class="number">01</span>Destination</a>
             </li>
-            <li><a href="crew.html" class="main-nav-link letter-spacing-2"><span class="number">02</span>Crew</a></li>
-            <li><a href="technology.html" class="main-nav-link letter-spacing-2"><span class="number">03</span>Technology</a>
+            <li><a href="crew.html" class="main-nav-link letter-spacing-3"><span class="number">02</span>Crew</a></li>
+            <li><a href="technology.html" class="main-nav-link letter-spacing-3"><span class="number">03</span>Technology</a>
             </li>
         </ul>
     </nav>
@@ -55,7 +55,7 @@
                 </nav>
                 <div class="destination-planet destination-moon current-active-destination">
                     <h2 class="planet-heading font-size-800 uppercase text-white font-family-bellefair">Moon</h2>
-                    <p class="planet-text font-size-400">
+                    <p class="planet-text font-size-200">
                         See our planet as you’ve never seen it before. A perfect relaxing trip away to help
                         regain perspective and come back refreshed. While you’re there, take in some history
                         by visiting the Luna 2 and Apollo 11 landing sites.
@@ -75,7 +75,7 @@
 
                 <div class="destination-planet destination-mars">
                     <h2 class="planet-heading font-size-800 uppercase text-white font-family-bellefair">Mars</h2>
-                    <p class="planet-text font-size-400">
+                    <p class="planet-text font-size-200">
                         Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons,
                         the tallest planetary mountain in our solar system. It’s two and a half times
                         the size of Everest!
@@ -95,7 +95,7 @@
 
                 <div class="destination-planet destination-europa">
                     <h2 class="planet-heading font-size-800 uppercase text-white font-family-bellefair">Europa</h2>
-                    <p class="planet-text font-size-400">
+                    <p class="planet-text font-size-200">
                         The smallest of the four Galilean moons orbiting Jupiter, Europa is a
                         winter lover’s dream. With an icy surface, it’s perfect for a bit of
                         ice skating, curling, hockey, or simple relaxation in your snug
@@ -116,7 +116,7 @@
 
                 <div class="destination-planet destination-titan">
                     <h2 class="planet-heading font-size-800 uppercase text-white font-family-bellefair">Titan</h2>
-                    <p class="planet-text font-size-400">
+                    <p class="planet-text font-size-200">
                         The only moon known to have a dense atmosphere other than Earth, Titan
                         is a home away from home (just a few hundred degrees colder!). As a
                         bonus, you get striking views of the Rings of Saturn.
