--- a/13 - Space Tourism Website/index.html
+++ b/13 - Space Tourism Website/index.html
@@ -16,12 +16,12 @@
     </div>
     <nav class="main-nav">
         <ul class="main-nav-list">
-            <li><a href="index.html" class="main-nav-link active letter-spacing-2"><span class="number">00</span>
+            <li><a href="index.html" class="main-nav-link active letter-spacing-3"><span class="number">00</span>
                 Home</a></li>
-            <li><a href="destination.html" class="main-nav-link letter-spacing-2"><span class="number">01</span>Destination</a>
+            <li><a href="destination.html" class="main-nav-link letter-spacing-3"><span class="number">01</span>Destination</a>
             </li>
-            <li><a href="crew.html" class="main-nav-link letter-spacing-2"><span class="number">02</span>Crew</a></li>
-            <li><a href="technology.html" class="main-nav-link letter-spacing-2"><span class="number">03</span>Technology</a>
+            <li><a href="crew.html" class="main-nav-link letter-spacing-3"><span class="number">02</span>Crew</a></li>
+            <li><a href="technology.html" class="main-nav-link letter-spacing-3"><span class="number">03</span>Technology</a>
             </li>
         </ul>
     </nav>
@@ -38,14 +38,14 @@
             <h1 class="primary-heading text-light letter-spacing-1">
                 So, you want to travel to
                 <span class="space text-white">Space</span></h1>
-            <p class="hero-section-text">
+            <p class="hero-section-text font-size-200">
                 Let’s face it; if you want to go to space, you might as well genuinely go to
                 outer space and not hover kind of on the edge of it. Well sit back, and relax
                 because we’ll give you a truly out of this world experience!
             </p>
         </div>
         <div class="button-box">
-            <a class="large-button background-white text-dark uppercase font-family-barlow font-size-600" href="destination.html">Explore</a>
+            <a class="large-button background-white text-dark uppercase font-family-barlow font-size-500" href="destination.html">Explore</a>
         </div>
     </div>
 </section>
