--- a/13 - Space Tourism Website/destination.html
+++ b/13 - Space Tourism Website/destination.html
@@ -45,12 +45,12 @@
             </div>
 
             <div class="intro-content">
-                <nav class="secondary-nav">
-                    <ul class="secondary-nav-list">
-                        <li><a href="#" class="secondary-nav-link active-link letter-spacing-2">Moon</a></li>
-                        <li><a href="#" class="secondary-nav-link letter-spacing-2">Mars</a></li>
-                        <li><a href="#" class="secondary-nav-link letter-spacing-2">Europa</a></li>
-                        <li><a href="#" class="secondary-nav-link letter-spacing-2">Titan</a></li>
+                <nav class="destination-nav">
+                    <ul class="destination-nav-list">
+                        <li><a href="#" class="destination-nav-link active-link letter-spacing-2">Moon</a></li>
+                        <li><a href="#" class="destination-nav-link letter-spacing-2">Mars</a></li>
+                        <li><a href="#" class="destination-nav-link letter-spacing-2">Europa</a></li>
+                        <li><a href="#" class="destination-nav-link letter-spacing-2">Titan</a></li>
                     </ul>
                 </nav>
                 <div class="destination-planet destination-moon current-active-destination">
