--- a/13 - Space Tourism Website/technology.html
+++ b/13 - Space Tourism Website/technology.html
@@ -40,19 +40,17 @@
             <div class="numbered-heading-container">
                 <h1 class="numbered-heading text-white"><span class="heading-number">03</span>Space Launch 101</h1>
             </div>
-            <div class="image-container-technology">
-                <img src="Images/Technology/image-launch-vehicle-landscape.jpg" alt="Vehicle launch">
-            </div>
 
             <div class="technology-intro-content">
                 <nav class="technology-nav">
                     <ul class="technology-nav-list">
-                        <li><a href="#" class="technology-nav-link">1</a></li>
+                        <li><a href="#" class="technology-nav-link active-link">1</a></li>
                         <li><a href="#" class="technology-nav-link">2</a></li>
                         <li><a href="#" class="technology-nav-link">3</a></li>
                     </ul>
                 </nav>
-                <div class="technology-text-content">
+
+                <div class="technology-text-content current-technology-text">
                     <div class="terminology font-family-barlow-condensed font-size-200 uppercase letter-spacing-3">
                         The Terminology ...
                     </div>
@@ -63,11 +61,46 @@
                         A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!
                     </p>
                 </div>
+
+                <div class="technology-text-content">
+                    <div class="terminology font-family-barlow-condensed font-size-200 uppercase letter-spacing-3">
+                        The Terminology ...
+                    </div>
+                    <h2 class="technology-heading font-family-bellefair uppercase font-size-700 text-white">
+                        Spaceport
+                    </h2>
+                    <p class="technology-text font-size-200">
+                        A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, by analogy to the seaport for ships or airport for aircraft. Based in the famous Cape Canaveral, our spaceport is ideally situated to take advantage of the Earth’s rotation for launch.
+                    </p>
+                </div>
+
+                <div class="technology-text-content">
+                    <div class="terminology font-family-barlow-condensed font-size-200 uppercase letter-spacing-3">
+                        The Terminology ...
+                    </div>
+                    <h2 class="technology-heading font-family-bellefair uppercase font-size-700 text-white">
+                        Space capsule
+                    </h2>
+                    <p class="technology-text font-size-200">
+                        A space capsule is an often-crewed spacecraft that uses a blunt-body reentry capsule to reenter the Earth's atmosphere without wings. Our capsule is where you'll spend your time during the flight. It includes a space gym, cinema, and plenty of other activities to keep you entertained.
+                    </p>
+                </div>
+
+
+
             </div>
+
+            <div class="image-container-technology">
+                <img class="landscape-image" src="Images/Technology/image-launch-vehicle-landscape.jpg" alt="Vehicle launch">
+                <img class="portrait-image" src="Images/Technology/image-launch-vehicle-portrait.jpg" alt="Vehicle launch">
+            </div>
+
         </div>
     </section>
 </main>
 
 <script src="Javascript/script.js"></script>
+<script src="Javascript/tabs.js"></script>
+
 </body>
 </html>
