--- a/13 - Space Tourism Website/technology.html
+++ b/13 - Space Tourism Website/technology.html
@@ -95,7 +95,7 @@
     </section>
 </main>
 
-<script src="Javascript/script.js"></script>
+<script src="Javascript/navigation.js"></script>
 <script src="Javascript/tabs.js"></script>
 
 </body>
