--- a/13 - Space Tourism Website/crew.html
+++ b/13 - Space Tourism Website/crew.html
@@ -104,7 +104,7 @@
 </main>
 
 
-<script src="Javascript/script.js"></script>
+<script src="Javascript/navigation.js"></script>
 <script src="Javascript/tabs.js"></script>
 </body>
 </html>
