--- a/13 - Space Tourism Website/destination.html
+++ b/13 - Space Tourism Website/destination.html
@@ -142,7 +142,7 @@
     </section>
 </main>
 
-<script src="Javascript/script.js"></script>
+<script src="Javascript/navigation.js"></script>
 <script src="Javascript/tabs.js"></script>
 </body>
 </html>
