--- a/14 - Password Generator/index.html
+++ b/14 - Password Generator/index.html
@@ -31,7 +31,8 @@
                     <p class="length-number text-neon-green font-size-200">10</p>
                 </div>
                 <div class="slider">
-                    <input type="range" min="0" max="20" name="character-range" class="character-slider" id="character-range">
+                    <input type="range" min="0" max="20" name="character-range" class="character-slider"
+                           id="character-range">
                 </div>
 
                 <div class="check-boxes-container flex flex-direction-column">
@@ -58,6 +59,19 @@
                             <img src="Images/icon-check.svg" class="check-box-icon" alt="Checkbox icon">
                         </div>
                         <p class="check-box-text">Include Symbols</p>
+                    </div>
+
+                    <div class="strength-box flex flex-justify-space-between flex-align-items-center">
+                        <p class="uppercase text-grey">Strength</p>
+                        <div class="strength-bars-container flex flex-align-items-center">
+                            <p class="bar-text font-size-200 uppercase text-almost-white">Too Weak!</p>
+                            <div class="strength-bars flex flex-align-items-center">
+                                <div class="bar bar-active"></div>
+                                <div class="bar bar-active"></div>
+                                <div class="bar bar-active"></div>
+                                <div class="bar bar-active"></div>
+                            </div>
+                        </div>
                     </div>
 
                     <button class="generate-button font-size-100">
