--- a/14 - Password Generator/index.html
+++ b/14 - Password Generator/index.html
@@ -17,11 +17,12 @@
             </header>
 
             <div class="generated-password-box flex flex-justify-space-between flex-align-items-center">
-                <p class="generated-password font-size-300">
-                    PTx1f5DaFX
-                </p>
-                <div class="image-container">
-                    <img src="Images/icon-copy.svg" class="copy-icon" alt="Copy icon">
+                <input type="text" class="generated-password font-size-300" placeholder="P4$5W0rD!">
+                <div class="copied-container flex">
+                    <p class="copied-text hidden text-neon-green font-size-100 uppercase">Copied</p>
+                    <button class="copy-button">
+                        <img src="Images/icon-copy.svg" class="copy-icon" alt="Copy icon">
+                    </button>
                 </div>
             </div>
 
@@ -62,14 +63,14 @@
                     </div>
 
                     <div class="strength-box flex flex-justify-space-between flex-align-items-center">
-                        <p class="uppercase text-grey">Strength</p>
+                        <p class="strength-text uppercase text-grey">Strength</p>
                         <div class="strength-bars-container flex flex-align-items-center">
-                            <p class="bar-text font-size-200 uppercase text-almost-white">Too Weak!</p>
+                            <p class="bar-text font-size-200 uppercase text-almost-white"></p>
                             <div class="strength-bars flex flex-align-items-center">
-                                <div class="bar bar-active"></div>
-                                <div class="bar bar-active"></div>
-                                <div class="bar bar-active"></div>
-                                <div class="bar bar-active"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
                             </div>
                         </div>
                     </div>
