--- a/14 - Password Generator/index.html
+++ b/14 - Password Generator/index.html
@@ -13,7 +13,7 @@
     <section class="password-generator-section">
         <div class="container">
             <header class="password-generator-header">
-                <h1 class="primary-heading font-size-100 text-grey">Password generator</h1>
+                <h1 class="primary-heading font-size-100 text-grey text-align-center">Password generator</h1>
             </header>
 
             <div class="generated-password-box flex flex-justify-space-between flex-align-items-center">
