--- a/14 - Password Generator/index.html
+++ b/14 - Password Generator/index.html
@@ -37,6 +37,9 @@
                 </div>
 
                 <div class="check-boxes-container flex flex-direction-column">
+                    <p class="error-message hidden">
+                        Please select a checkbox!
+                    </p>
                     <div class="flex flex-align-items-center">
                         <div class="check-box upper-case-check-box flex flex-align-items-center flex-justify-content-center">
                             <img src="Images/icon-check.svg" class="check-box-icon flex " alt="Checkbox icon">
