--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="CSS/utility-classes.css">
-  <title>Frontend Mentor | Designo Agency Website Challenge</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/utility-classes.css">
+    <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
 <body>
+<header class="main-header">
+    <div class="logo-container">
+        <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
+    </div>
+    <nav class="main-nav">
+        <ul class="main-nav-list">
+            <li><a href="#" class="main-nav-link">Our Content</a></li>
+            <li><a href="#" class="main-nav-link">Locations</a></li>
+            <li><a href="#" class="main-nav-link">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+
+</main>
+
+</body>
+</html>
 <!--  Our Company-->
 <!--  Locations-->
 <!--  Contact-->
@@ -57,5 +76,3 @@
 <!--  Contact Us (Central Office)-->
 <!--  P : +1 253-863-8967-->
 <!--  M : contact@designo.co-->
-</body>
-</html>
