--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -20,19 +20,18 @@
 
         <nav class="main-nav">
             <ul class="main-nav-list flex">
-                <li><a href="#" class="main-nav-link font-size-300 uppercase">Our Content</a></li>
-                <li><a href="#" class="main-nav-link font-size-300 uppercase">Locations</a></li>
-                <li><a href="#" class="main-nav-link font-size-300 uppercase">Contact</a></li>
+                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Our Content</a></li>
+                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Locations</a></li>
+                <li><a href="#" class="main-nav-link font-size-300 uppercase letter-spacing-1">Contact</a></li>
             </ul>
         </nav>
 
         <div class="mobile-navigation">
-            <button class="menu-open-button">
-                <img src="Images/shared/mobile/icon-hamburger.svg" alt="Hamburger icon" class="mobile-nav-icon">
-            </button>
-            <button class="menu-close-button">
-                <img src="Images/shared/mobile/icon-close.svg" alt="close icon" class="mobile-nav-icon">
-            </button>
+            <div class="mobile-navigation-button">
+                <div class="layer1"></div>
+                <div class="layer2"></div>
+                <div class="layer3"></div>
+            </div>
         </div>
 
     </div>
@@ -40,8 +39,8 @@
 
 <main>
     <section class="hero-section">
-        <div class="hero-container background-peach grid grid--2-columns">
-            <div class="hero-text-box flow-space">
+        <div class="hero-container grid grid--2-columns background-peach">
+            <div class="hero-text-box hero-flow">
                 <h1 class="primary-heading">
                     Award-winning custom designs and digital branding solutions
                 </h1>
@@ -49,7 +48,7 @@
                     With over 10 years in the industry, we are experienced in creating fully responsive websites, app
                     design, and engaging brand experiences. Find out more about our services.
                 </p>
-                <button class="call-to-action-button">
+                <button class="btn call-to-action-button font-size-100 text-black background-white uppercase">
                     Learn more
                 </button>
             </div>
@@ -58,61 +57,156 @@
             </div>
         </div>
     </section>
+
+    <section class="projects-section section-padding">
+        <div class="container grid grid--2-columns">
+            <div class="project web-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
+                <h2 class="secondary-heading uppercase letter-spacing-1">
+                    Web Design
+                </h2>
+                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3"
+                   href="#">
+                    View Projects <span class="link-symbol">&#62;</span>
+                </a>
+            </div>
+            <div class="project app-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
+                <h2 class="secondary-heading uppercase letter-spacing-1">
+                    App Design
+                </h2>
+                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3"
+                   href="#">
+                    View Projects <span class="link-symbol">&#62;</span>
+                </a>
+            </div>
+            <div class="project graphic-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
+                <h2 class="secondary-heading uppercase letter-spacing-1">
+                    Graphic Design
+                </h2>
+
+                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3"
+                   href="#">
+                    View Projects <span class="link-symbol">&#62;</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="advantages-section section-padding">
+        <div class="container grid grid--3-columns">
+            <div class="advantage grid">
+                <div class="intro-image-container">
+                    <img src="Images/home/desktop/illustration-passionate.svg" alt="Designo advantage">
+                </div>
+                <div class="intro-text flow">
+                    <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-3">
+                        Passionate
+                    </h3>
+                    <p class="intro-text">
+                        Each project starts with an in-depth brand research to ensure we only create products that serve
+                        a
+                        purpose. We merge art, design, and technology into exciting new solutions
+                    </p>
+                </div>
+            </div>
+
+            <div class="advantage grid">
+                <div class="intro-image-container">
+                    <img src="Images/home/desktop/illustration-resourceful.svg" alt="Designo advantage">
+                </div>
+                <div class="intro-text flow">
+                    <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-3">
+                        Resourceful
+                    </h3>
+                    <p class="intro-text">
+                        Everything that we do has a strategic purpose. We use an agile approach in all of our projects
+                        and value customer collaboration. It guarantees superior results that fulfill our clients’
+                        needs.
+                    </p>
+                </div>
+            </div>
+
+            <div class="advantage grid">
+                <div class="intro-image-container">
+                    <img src="Images/home/desktop/illustration-friendly.svg" alt="Designo advantage">
+                </div>
+                <div class="intro-text flow">
+                    <h3 class="tertiary-heading font-size-200 uppercase letter-spacing-3">
+                        Friendly
+                    </h3>
+                    <p class="intro-text font-size-100">
+                        We are a group of enthusiastic folks who know how to put people first. Our success depends on
+                        our customers, and we strive to give them the best experience a company can provide.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </main>
 
-<section class="project-section">
-    Our Company
-    Locations
-    Contact
+<footer class="footer section-padding background-black">
 
-    Award-winning custom designs and digital branding solutions
+    <section class="get-in-touch-section">
+        <div class="container get-in-touch-container background-peach grid grid--2-columns">
+            <div class="get-in-touch-text-box flow">
+                <h2 class="secondary-heading">
+                    Let’s talk about your project
+                </h2>
+                <p class="font-size-100 text-white">
+                    Ready to take it to the next level? Contact us today and find out how our expertise can help your
+                    business grow.
+                </p>
+            </div>
+
+            <div class="button-container grid">
+                <button class="btn get-in-touch-button uppercase">
+                    Get in Touch
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <div class="container footer-container">
+        <div class="logo-container">
+            <a href="#"><img src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+        </div>
+
+        <nav class="footer-nav">
+            <ul class="footer-nav-list list-style-none">
+                <li><a href="#" class="footer-nav-link text-white text-decoration-none uppercase letter-spacing-1">Our
+                    company</a></li>
+                <li><a href="#" class="footer-nav-link text-white text-decoration-none uppercase letter-spacing-1">Locations</a>
+                </li>
+                <li><a href="#" class="footer-nav-link text-white text-decoration-none uppercase letter-spacing-1">Contact</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="address">
+            <p class="main-address footer-text-color text-bold">Designo Central Office</p>
+            <p class="sub-address footer-text-color">3886 Wellington Street</p>
+            <p class="sub-address footer-text-color">Toronto, Ontario M9C 3J5</p>
+        </div>
+
+        <div class="contact-us-box">
+            <p class="contact-us-heading footer-text-color text-bold">Contact Us (Central Office)</p>
+            <a class="footer-link footer-text-color text-decoration-none" href="tel: +1 253-863-8967">P : +1
+                253-863-8967</a>
+            <a class="footer-link footer-text-color text-decoration-none" href="contact@designo.co">M :
+                contact@designo.co</a>
+        </div>
 
 
-    Learn more
+    </div>
+</footer>
 
-    Web Design
-    View Projects
 
-    App Design
-    View Projects
-
-    Graphic Design
-    View Projects
-
-</section>
-
+<div class="overlay hidden"></div>
 <script src="Javascript/script.js"></script>
 </body>
 </html>
-  Our Company
-  Locations
-  Contact
 
-  Award-winning custom designs and digital branding solutions
-
-
-  Learn more
-
-  Web Design
-  View Projects
-
-  App Design
-  View Projects
-
-  Graphic Design
-  View Projects
-
-<!--  Passionate-->
-<!--  Each project starts with an in-depth brand research to ensure we only create products that serve a purpose. We merge-->
-<!--  art, design, and technology into exciting new solutions.-->
-<!--  -->
-<!--  Resourceful-->
-<!--  Everything that we do has a strategic purpose. We use an agile approach in all of our projects and value customer-->
-<!--  collaboration. It guarantees superior results that fulfill our clients’ needs.-->
-<!--  -->
-<!--  Friendly-->
-<!--  We are a group of enthusiastic folks who know how to put people first. Our success depends on our customers, and we-->
-<!--  strive to give them the best experience a company can provide.-->
 <!--  -->
 <!--  Let’s talk about your project-->
 <!--  Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.-->
