--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -142,7 +142,6 @@
         </div>
     </section>
 
-
 </main>
 
 <footer class="footer section-padding background-black">
@@ -168,12 +167,12 @@
     </section>
 
     <div class="container footer-container">
-        <div class="logo-container">
-            <a href="#"><img src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
+        <div class="footer-logo-container">
+            <a class="flex flex-align-items-center flex-justify-content-center" href="#"><img src="Images/shared/desktop/logo-light.png" class="footer-logo" alt="Logo light"></a>
         </div>
 
         <nav class="footer-nav">
-            <ul class="footer-nav-list list-style-none">
+            <ul class="footer-nav-list list-style-none flex flex-direction-column flex-gap">
                 <li><a href="#" class="footer-nav-link text-white text-decoration-none uppercase letter-spacing-1">Our
                     company</a></li>
                 <li><a href="#" class="footer-nav-link text-white text-decoration-none uppercase letter-spacing-1">Locations</a>
@@ -191,35 +190,25 @@
 
         <div class="contact-us-box">
             <p class="contact-us-heading footer-text-color text-bold">Contact Us (Central Office)</p>
-            <a class="footer-link footer-text-color text-decoration-none" href="tel: +1 253-863-8967">P : +1
+            <a class="footer-contact-link footer-text-color text-decoration-none" href="tel: +1 253-863-8967">P : +1
                 253-863-8967</a>
-            <a class="footer-link footer-text-color text-decoration-none" href="contact@designo.co">M :
+            <a class="footer-contact-link footer-text-color text-decoration-none" href="contact@designo.co">M :
                 contact@designo.co</a>
         </div>
-
+        
+        <div class="social-logos flex flex-gap">
+            <a href="#"><ion-icon name="logo-facebook" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-youtube" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-twitter" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-pinterest" class="social-logo"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram" class="social-logo"></ion-icon></a>
+        </div>
 
     </div>
 </footer>
-
 
 <div class="overlay hidden"></div>
 <script src="Javascript/script.js"></script>
 </body>
 </html>
 
-<!--  -->
-<!--  Let’s talk about your project-->
-<!--  Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.-->
-<!--  Get in touch-->
-<!--  -->
-<!--  Our company-->
-<!--  Locations-->
-<!--  Contact-->
-<!--  -->
-<!--  Designo Central Office-->
-<!--  3886 Wellington Street-->
-<!--  Toronto, Ontario M9C 3J5-->
-<!--  -->
-<!--  Contact Us (Central Office)-->
-<!--  P : +1 253-863-8967-->
-<!--  M : contact@designo.co-->
