--- a/15 - Designo Multi Page Website/index.html
+++ b/15 - Designo Multi Page Website/index.html
@@ -9,14 +9,15 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/utility-classes.css">
+
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
 <body>
 <header class="main-header">
     <div class="container header-container flex flex-justify-space-between flex-align-items-center">
-        <div class="logo-container">
+        <a href="index.html" class="logo-container">
             <img src="Images/shared/desktop/logo-dark.png" class="logo" alt="Designo logo">
-        </div>
+        </a>
 
         <nav class="main-nav">
             <ul class="main-nav-list flex">
@@ -60,21 +61,21 @@
 
     <section class="projects-section section-padding">
         <div class="container grid grid--2-columns">
+
             <div class="project web-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
                 <h2 class="secondary-heading uppercase letter-spacing-1">
                     Web Design
                 </h2>
-                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3"
-                   href="#">
+                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
+
             <div class="project app-design flex flex-justify-content-center flex-align-items-center flex-direction-column flex-gap">
                 <h2 class="secondary-heading uppercase letter-spacing-1">
                     App Design
                 </h2>
-                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3"
-                   href="#">
+                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -83,8 +84,7 @@
                     Graphic Design
                 </h2>
 
-                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3"
-                   href="#">
+                <a class="view-projects-link font-size-100 text-white uppercase text-decoration-none letter-spacing-3">
                     View Projects <span class="link-symbol">&#62;</span>
                 </a>
             </div>
@@ -195,7 +195,7 @@
             <a class="footer-contact-link footer-text-color text-decoration-none" href="contact@designo.co">M :
                 contact@designo.co</a>
         </div>
-        
+
         <div class="social-logos flex flex-gap">
             <a href="#"><ion-icon name="logo-facebook" class="social-logo"></ion-icon></a>
             <a href="#"><ion-icon name="logo-youtube" class="social-logo"></ion-icon></a>
